--- a/portofolio.html
+++ b/portofolio.html
@@ -6,7 +6,76 @@
         <title> WebStudio</title>    
 <header>
 
-
+<main>
+    <button type="button">All</button>
+    <button type="button">Web-sites</button>
+    <button type="button">Apps</button>
+    <button type="button">Design</button>
+    <button type="button">Marketing</button>
+<section> 
+    <img src="images/image-8.jpg" alt="Technoduck" >
+    <br />
+    <span>Technoduck</span>
+    <br />
+    <span>Web-site</span>
+</section>
+<section>
+    <img src="images/image-9.jpg" alt="Poster" >
+    <br />
+    <span>Poster New Orlean vs Golden Star</span>
+    <br />
+    <span>Design</span>
+</section>
+<section>
+    <img src="images/image-10.jpg" alt="Restaurant" >
+    <br />
+    <span>Seafood Resteaurant</span>
+    <br />
+    <span>Apps</span>
+</section>
+<section>
+    <img src="images/image-11.jpg" alt="Headphones" >
+    <br />
+    <span>Project Prime</span>
+    <br />
+    <span>Marketing</span>
+</section>
+<section>
+    <img src="images/image-12.jpg" alt="Boxes" >
+    <br />
+    <span>Project boxes</span>
+    <br />
+    <span>Apps</span>
+</section>
+<section>
+    <img src="images/image-13.jpg" alt="Monitor" >
+    <br />
+    <span>Inspiration has no Borders</span>
+    <br />
+    <span>Web-site</span>
+</section>
+<section>
+    <img src="images/image-14.jpg" alt="Magazine" >
+    <br />
+    <span>Limited Edition</span>
+    <br />
+    <span>Design</span>
+</section>
+<section>
+    <img src="images/image-15.jpg" alt="Label" >
+    <br />
+    <span>Project LAB</span>
+    <br />
+    <span>Marketing</span>
+</section>
+<section>
+    <img src="images/image-16.jpg" alt="Laptop typing" >
+    <br />
+    <span>Growing Business</span>
+    <br />
+    <span>Apps</span>
+</section>
+</main>
 
 <footer>
         <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0">WebStudio</a> 
