--- a/portofolio.html
+++ b/portofolio.html
@@ -1,88 +1,117 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="webstudio" content="Solutions for business" />
-        <title> WebStudio</title>    
+        <title> WebStudio</title>  
+        <link rel="stylesheet" href="css/styles.css" />  
 <header>
 
-<main>
-    <button type="button">All</button>
-    <button type="button">Web-sites</button>
-    <button type="button">Apps</button>
-    <button type="button">Design</button>
-    <button type="button">Marketing</button>
-<section> 
-    <img src="images/image-8.jpg" alt="Technoduck" >
+    <a class="site-title" href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="header-studio">Studio</span></a>
+    
+    <nav>
+    <ul class="nav">
+        <li><a class="nav" href="./Studio.html">Studio</a></li> 
+        <li><a class="nav" href="./Portofolio.html">Portofolio</a></li>
+        <li><a class="nav" href="./Contacts.html">Contacts</a></li>
+    </ul>
+    </nav>
+    <ul class="contact-link">
+        <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-link" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+    </ul>
+</header>
+
+<br>
+    <button type="button" class="button-portofolio"><span class="buttons">All</span></button>
+    <button type="button" class="button-portofolio"><span class="buttons">Web-sites</span></button>
+    <button type="button" class="button-portofolio"><span class="buttons">Apps</span></button>
+    <button type="button" class="button-portofolio"><span class="buttons">Design</span></button>
+    <button type="button" class="button-portofolio"><span class="buttons">Marketing</span></button>
+<br> </br>
+
+    <section class="pictures"> 
+    <img src="images/image-8.jpg" alt="Technoduck" width="300">
     <br />
-    <span>Technoduck</span>
+    <span class="pictures-title">Technoduck</span>
     <br />
-    <span>Web-site</span>
+    <span class="pics-description">Web-site</span>
 </section>
-<section>
-    <img src="images/image-9.jpg" alt="Poster" >
+<br> <br />
+<section class="pictures">
+    <img src="images/image-9.jpg" alt="Poster" width="300">
     <br />
-    <span>Poster New Orlean vs Golden Star</span>
+    <span class="pictures-title">Poster New Orlean vs Golden Star</span>
     <br />
-    <span>Design</span>
+    <span class="pics-description">Design</span>
 </section>
-<section>
-    <img src="images/image-10.jpg" alt="Restaurant" >
+<br> <br />
+<section class="pictures">
+    <img src="images/image-10.jpg" alt="Restaurant" width="300">
     <br />
-    <span>Seafood Resteaurant</span>
+    <span class="pictures-title">Seafood Resteaurant</span>
     <br />
-    <span>Apps</span>
+    <span class="pics-description">Apps</span>
 </section>
-<section>
-    <img src="images/image-11.jpg" alt="Headphones" >
+<br> <br />
+<section class="pictures">
+    <img src="images/image-11.jpg" alt="Headphones" width="300">
     <br />
-    <span>Project Prime</span>
+    <span class="pictures-title">Project Prime</span>
     <br />
-    <span>Marketing</span>
+    <span class="pics-description">Marketing</span>
 </section>
-<section>
-    <img src="images/image-12.jpg" alt="Boxes" >
+<br> <br />
+<section class="pictures">
+    <img src="images/image-12.jpg" alt="Boxes" width="300">
     <br />
-    <span>Project boxes</span>
+    <span class="pictures-title">Project boxes</span>
     <br />
-    <span>Apps</span>
+    <span class="pics-description">Apps</span>
 </section>
-<section>
-    <img src="images/image-13.jpg" alt="Monitor" >
+<br> <br />
+<section class="pictures">
+    <img src="images/image-13.jpg" alt="Monitor" width="300">
     <br />
-    <span>Inspiration has no Borders</span>
+    <span class="pictures-title">Inspiration has no Borders</span>
     <br />
-    <span>Web-site</span>
+    <span class="pics-description">Web-site</span>
 </section>
-<section>
-    <img src="images/image-14.jpg" alt="Magazine" >
+<br> <br />
+<section class="pictures">
+    <img src="images/image-14.jpg" alt="Magazine" width="300">
     <br />
-    <span>Limited Edition</span>
+    <span class="pictures-title">Limited Edition</span>
     <br />
-    <span>Design</span>
+    <span class="pics-description">Design</span>
 </section>
-<section>
-    <img src="images/image-15.jpg" alt="Label" >
+<br> <br />
+<section class="pictures">
+    <img src="images/image-15.jpg" alt="Label" width="300">
     <br />
-    <span>Project LAB</span>
+    <span class="pictures-title">Project LAB</span>
     <br />
-    <span>Marketing</span>
+    <span class="pics-description">Marketing</span>
 </section>
-<section>
-    <img src="images/image-16.jpg" alt="Laptop typing" >
+<br> <br />
+<section class="pictures">
+    <img src="images/image-16.jpg" alt="Laptop typing" width="300">
     <br />
-    <span>Growing Business</span>
+    <span class="pictures-title">Growing Business</span>
     <br />
-    <span>Apps</span>
+    <span class="pics-description">Apps</span>
 </section>
 </main>
 
-<footer>
-        <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0">WebStudio</a> 
-<address>
-        <p>695 Park Ave, NY 10065, USA</p>
-        <p>info@devstudio.com</p>
-        <p>+1 212-772-4150</p>
+<footer class="footer">
+        <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
+      <br> <br />
+        <address>
+        <ul class="contact-link">
+            <li class="address">695 Park Ave, NY 10065, USA</li>
+            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+        </ul>
 </address>
 </footer>
 </body>
