--- a/index.html
+++ b/index.html
@@ -3,44 +3,48 @@
     <head>
         <meta charset="utf-8" />
         <meta name="webstudio" content="Solutions for business" />
-        <title> WebStudio</title>    
+        <title> WebStudio</title> 
+        <link rel="stylesheet" href="css/styles.css" />  
 <header>
 
-     <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0">WebStudio</a>
+    <a class="site-title" href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="header-studio">Studio</span></a>
 
     <nav>
-    <ul>
-        <li><a href="./Studio.html">Studio</a></li> 
-        <li><a href="./Portofolio.html">Portofolio</a></li>
-        <li><a href="./Contacts.html">Contacts</a></li>
-    </ul>
-    </nav>
- 
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
-
-</header>
+        <ul class="nav">
+            <li><a class="nav" href="./Studio.html">Studio</a></li> 
+            <li><a class="nav" href="./Portofolio.html">Portofolio</a></li>
+            <li><a class="nav" href="./Contacts.html">Contacts</a></li>
+        </ul>
+        </nav>
+        <ul class="contact-link">
+            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+        </ul>
+    </header>
 <main>
-    <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS    </h1>
-    <button type="button">Request our services</button>
-
+<section class="homepg"> 
+    <h1 id="title">EFFECTIVE SOLUTIONS FOR 
+        <br /> 
+        YOUR BUSINESS</h1>
+    <button type="button" class="request">Request our service</button>
+</section> 
 
 <ul>
-<li><h3>ATTENTION TO DETAILS</h3>
-<p>We go into all the details and processes of your business to develop a customized solution.</p></li>
+<li><h3 class="attention-details">ATTENTION TO DETAILS</h3>
+<p class="details">We go into all the details and processes of your business to develop a customized solution.</p></li>
 
-<li><h3>PUNCTUALITY</h3>
-<p>With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p></li>
+<li><h3 class="attention-details">PUNCTUALITY</h3>
+<p class="details">With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p></li>
 
-<li><h3>PLANNING</h3>
-<p>You will be able to observe and participate in every phase of solution development and implementation.</p></li>
+<li><h3 class="attention-details">PLANNING</h3>
+<p class="details">You will be able to observe and participate in every phase of solution development and implementation.</p></li>
 
-<li><h3>MODERN TECHNOLOGIES</h3>
-<p>We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p></li>
+<li><h3 class="attention-details">MODERN TECHNOLOGIES</h3>
+<p class="details">We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p></li>
 </ul>
 
 <div>
-    <h2>What we do</h2>
+    <h2 class="section">What we do</h2>
 <ul>
  <li>  <img src="images/image-1.jpg" alt="Typing on a computer" width="300">
  </li>
@@ -56,16 +60,16 @@
 <ul>
 <li><img src="images/image-4.jpg" alt="Product Designer" width="225"> 
     <h3>Christopher Walker</h3> 
-    <p>Product Designer</p></li>
+    <p class="job">Product Designer</p></li>
 <li><img src="images/image-5.jpg" alt="Frontend Developer" width="225">
     <h3>Kylie Evans</h3>
-    <p>Frontend Developer</p></li>
+    <p class="job">Frontend Developer</p></li>
 <li><img src="images/image-6.jpg" alt="Marketing" width="225">  
     <h3>Ryan Harris</h3> 
-    <p>Marketing</p></li>
+    <p class="job">Marketing</p></li>
 <li><img src="images/image-7.jpg" alt="UI Designer" width="225">
     <h3>Tyler Moore</h3>
-    <p>UI Designer</p></li>
+    <p class="job">UI Designer</p></li>
 </ul>
 </div>
 
