--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </ul>
         </nav>
         <ul class="contact-link">
-            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-link" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+            <li><a class="contact-link-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link-header" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
         </ul>
     </header>
 <main>
@@ -56,30 +56,34 @@
 </div>
 
 <div>
-    <h2>Our team</h2>
+    <h2 class="section">Our team</h2>
 <ul>
 <li><img src="images/image-4.jpg" alt="Product Designer" width="225"> 
-    <h3>Christopher Walker</h3> 
+    <h3 class="name"><b>Christopher Walker</b></h3> 
     <p class="job">Product Designer</p></li>
 <li><img src="images/image-5.jpg" alt="Frontend Developer" width="225">
-    <h3>Kylie Evans</h3>
+    <h3 class="name"><b>Kylie Evans</b></h3>
     <p class="job">Frontend Developer</p></li>
 <li><img src="images/image-6.jpg" alt="Marketing" width="225">  
-    <h3>Ryan Harris</h3> 
+    <h3 class="name"><b>Ryan Harris</b></h3> 
     <p class="job">Marketing</p></li>
 <li><img src="images/image-7.jpg" alt="UI Designer" width="225">
-    <h3>Tyler Moore</h3>
+    <h3 class="name"><b>Tyler Moore</b></h3>
     <p class="job">UI Designer</p></li>
 </ul>
 </div>
 
 </main>
-<footer>
-    <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0">WebStudio</a> 
+
+<footer class="footer">
+    <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
+  <br> <br />
 <address>
-    <p>695 Park Ave, NY 10065, USA</p>
-    <p>info@devstudio.com</p>
-    <p>+1 212-772-4150</p>
+    <ul class="contact-link-footer">
+        <li class="address">695 Park Ave, NY 10065, USA</li>
+        <li><a class="contact-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-link-footer" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+    </ul>
 </address>
 </footer>
 </body>
