--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <nav>
         <ul class="nav">
-            <li><a class="nav" href="./Studio.html">Studio</a></li> 
-            <li><a class="nav" href="./Portofolio.html">Portofolio</a></li>
-            <li><a class="nav" href="./Contacts.html">Contacts</a></li>
+            <li><a class="nav" href="./Studio.html"><b>Studio</b></a></li> 
+            <li><a class="nav" href="./Portofolio.html"><b>Portofolio</b></a></li>
+            <li><a class="nav" href="./Contacts.html"><b>Contacts</b></a></li>
         </ul>
         </nav>
-        <ul class="contact-link">
+        <ul class="contact-link-header">
             <li><a class="contact-link-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contact-link-header" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
         </ul>
