--- a/portofolio.html
+++ b/portofolio.html
@@ -11,14 +11,14 @@
     
     <nav>
     <ul class="nav">
-        <li><a class="nav" href="./Studio.html">Studio</a></li> 
-        <li><a class="nav" href="./Portofolio.html">Portofolio</a></li>
-        <li><a class="nav" href="./Contacts.html">Contacts</a></li>
+        <li><a class="nav" href="./Studio.html"><b>Studio</b></a></li> 
+        <li><a class="nav" href="./Portofolio.html"><b>Portofolio</b></a></li>
+        <li><a class="nav" href="./Contacts.html"><b>Contacts</b></a></li>
     </ul>
     </nav>
-    <ul class="contact-link">
-        <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact-link" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+    <ul class="contact-link-header">
+        <li><a class="contact-link-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-link-header" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
     </ul>
 </header>
 
@@ -107,10 +107,10 @@
         <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
       <br> <br />
         <address>
-        <ul class="contact-link">
+        <ul class="contact-link-footer">
             <li class="address">695 Park Ave, NY 10065, USA</li>
-            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-link" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+            <li><a class="contact-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link-footer" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
         </ul>
 </address>
 </footer>
