--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul class="nav">
             <li><a class="nav" href="./Studio.html"><b>Studio</b></a></li> 
-            <li><a class="nav" href="./Portofolio.html"><b>Portofolio</b></a></li>
+            <li><a class="nav" href="portofolio.html"><b>Portofolio</b></a></li>
             <li><a class="nav" href="./Contacts.html"><b>Contacts</b></a></li>
         </ul>
         </nav>
