update line breaks

--- a/portofolio.html
+++ b/portofolio.html
@@ -12,7 +12,7 @@
     <nav>
     <ul class="nav">
         <li><a class="nav" href="./Studio.html"><b>Studio</b></a></li> 
-        <li><a class="nav" href="./Portofolio.html"><b>Portofolio</b></a></li>
+        <li><a class="nav" href="portofolio.html"><b>Portofolio</b></a></li>
         <li><a class="nav" href="./Contacts.html"><b>Contacts</b></a></li>
     </ul>
     </nav>
@@ -22,90 +22,100 @@
     </ul>
 </header>
 
-<br>
+<br />
     <button type="button" class="button-portofolio"><span class="buttons">All</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">Web-sites</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">Apps</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">Design</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">Marketing</span></button>
-<br> </br>
+
+<br />
 
     <section class="pictures"> 
+        <h2 class="h2-portofolio">none</h2>
     <img src="images/image-8.jpg" alt="Technoduck" width="300">
     <br />
     <span class="pictures-title">Technoduck</span>
     <br />
     <span class="pics-description">Web-site</span>
 </section>
-<br> <br />
+<br />
 <section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
     <img src="images/image-9.jpg" alt="Poster" width="300">
     <br />
     <span class="pictures-title">Poster New Orlean vs Golden Star</span>
     <br />
     <span class="pics-description">Design</span>
 </section>
-<br> <br />
+<br />
 <section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
     <img src="images/image-10.jpg" alt="Restaurant" width="300">
     <br />
     <span class="pictures-title">Seafood Resteaurant</span>
     <br />
     <span class="pics-description">Apps</span>
 </section>
-<br> <br />
+<br />
 <section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
     <img src="images/image-11.jpg" alt="Headphones" width="300">
     <br />
     <span class="pictures-title">Project Prime</span>
     <br />
     <span class="pics-description">Marketing</span>
 </section>
-<br> <br />
+<br />
 <section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
     <img src="images/image-12.jpg" alt="Boxes" width="300">
     <br />
     <span class="pictures-title">Project boxes</span>
     <br />
     <span class="pics-description">Apps</span>
 </section>
-<br> <br />
+<br />
 <section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
     <img src="images/image-13.jpg" alt="Monitor" width="300">
     <br />
     <span class="pictures-title">Inspiration has no Borders</span>
     <br />
     <span class="pics-description">Web-site</span>
 </section>
-<br> <br />
+<br />
 <section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
     <img src="images/image-14.jpg" alt="Magazine" width="300">
     <br />
     <span class="pictures-title">Limited Edition</span>
     <br />
     <span class="pics-description">Design</span>
 </section>
-<br> <br />
+<br />
 <section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
     <img src="images/image-15.jpg" alt="Label" width="300">
     <br />
     <span class="pictures-title">Project LAB</span>
     <br />
     <span class="pics-description">Marketing</span>
 </section>
-<br> <br />
+<br />
 <section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
     <img src="images/image-16.jpg" alt="Laptop typing" width="300">
     <br />
     <span class="pictures-title">Growing Business</span>
     <br />
     <span class="pics-description">Apps</span>
 </section>
-</main>
+
 
 <footer class="footer">
         <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
-      <br> <br />
+      <br />
         <address>
         <ul class="contact-link-footer">
             <li class="address">695 Park Ave, NY 10065, USA</li>
