--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav>
         <ul class="nav">
-            <li><a class="nav" href="./Studio.html"><b>Studio</b></a></li> 
+            <li><a class="nav" class="current" href="./Studio.html"><b>Studio</b></a></li> 
             <li><a class="nav" href="portofolio.html"><b>Portofolio</b></a></li>
             <li><a class="nav" href="./Contacts.html"><b>Contacts</b></a></li>
         </ul>
@@ -77,7 +77,7 @@
 
 <footer class="footer">
     <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
-  <br> <br />
+  <br />
 <address>
     <ul class="contact-link-footer">
         <li class="address">695 Park Ave, NY 10065, USA</li>
