--- a/portofolio.html
+++ b/portofolio.html
@@ -5,14 +5,19 @@
         <meta name="webstudio" content="Solutions for business" />
         <title> WebStudio</title>  
         <link rel="stylesheet" href="css/styles.css" />  
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link 
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
+            rel="stylesheet">
 <header>
 
     <a class="site-title" href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="header-studio">Studio</span></a>
     
     <nav>
     <ul class="nav">
-        <li><a class="nav" href="./Studio.html"><b>Studio</b></a></li> 
-        <li><a class="nav" href="portofolio.html"><b>Portofolio</b></a></li>
+        <li><a class="nav" href="index.html"><b>Studio</b></a></li> 
+        <li><a class="nav-current" href="portofolio.html"><b>Portofolio</b></a></li>
         <li><a class="nav" href="./Contacts.html"><b>Contacts</b></a></li>
     </ul>
     </nav>
