update text and pics

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <ul class="nav">
             <li><a class="nav-current" href="index.html"><b>Studio</b></a></li> 
-            <li><a class="nav" href="portofolio.html"><b>Portofolio</b></a></li>
+            <li><a class="nav" href="portfolio.html"><b>Portfolio</b></a></li>
             <li><a class="nav" href="./Contacts.html"><b>Contacts</b></a></li>
         </ul>
         </nav>
@@ -31,31 +31,31 @@
     <h1 id="title">EFFECTIVE SOLUTIONS FOR 
         <br /> 
         YOUR BUSINESS</h1>
-    <button type="button" class="request">Request our service</button>
+    <button type="button" class="request">Order service</button>
 </section> 
 
 <ul>
-<li><h3 class="attention-details">ATTENTION TO DETAILS</h3>
-<p class="details">We go into all the details and processes of your business to develop a customized solution.</p></li>
+<li><h3 class="attention-details">Strategy</h3>
+<p class="details">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
 
-<li><h3 class="attention-details">PUNCTUALITY</h3>
-<p class="details">With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p></li>
+<li><h3 class="attention-details">Punctuality</h3>
+<p class="details">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
 
-<li><h3 class="attention-details">PLANNING</h3>
-<p class="details">You will be able to observe and participate in every phase of solution development and implementation.</p></li>
+<li><h3 class="attention-details">Diligence</h3>
+<p class="details">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
 
-<li><h3 class="attention-details">MODERN TECHNOLOGIES</h3>
-<p class="details">We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p></li>
+<li><h3 class="attention-details">Technologies</h3>
+<p class="details">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
 </ul>
 
 <div>
     <h2 class="section">What we do</h2>
 <ul>
- <li>  <img src="images/image-1.jpg" alt="Typing on a computer" width="300">
+ <li>  <img src="images/image-1.jpg" alt="Monitor" width="360">
  </li>
- <li>  <img src="images/image-2.jpg" alt="Checking on the phone" width="300">
+ <li>  <img src="images/image-2.jpg" alt="Checking multiple conversations" width="360">
  </li>
- <li>   <img src="images/image-3.jpg" alt="Checking on the tablet" width="300">
+ <li>   <img src="images/image-3.jpg" alt="Checking on the phone" width="360">
     </li>
 </ul>
 </div>
@@ -63,17 +63,17 @@
 <div>
     <h2 class="section">Our team</h2>
 <ul>
-<li><img src="images/image-4.jpg" alt="Product Designer" width="225"> 
-    <h3 class="name"><b>Christopher Walker</b></h3> 
+<li><img src="images/image-4.jpg" alt="Product Designer" width="264"> 
+    <h3 class="name"><b>Mark Guerrero</b></h3> 
     <p class="job">Product Designer</p></li>
-<li><img src="images/image-5.jpg" alt="Frontend Developer" width="225">
-    <h3 class="name"><b>Kylie Evans</b></h3>
+<li><img src="images/image-5.jpg" alt="Frontend Developer" width="264">
+    <h3 class="name"><b>Tom Ford</b></h3>
     <p class="job">Frontend Developer</p></li>
-<li><img src="images/image-6.jpg" alt="Marketing" width="225">  
-    <h3 class="name"><b>Ryan Harris</b></h3> 
+<li><img src="images/image-6.jpg" alt="Marketing" width="264">  
+    <h3 class="name"><b>Camila Garcia</b></h3> 
     <p class="job">Marketing</p></li>
-<li><img src="images/image-7.jpg" alt="UI Designer" width="225">
-    <h3 class="name"><b>Tyler Moore</b></h3>
+<li><img src="images/image-7.jpg" alt="UI Designer" width="264">
+    <h3 class="name"><b>Daniel Wilson</b></h3>
     <p class="job">UI Designer</p></li>
 </ul>
 </div>
@@ -83,13 +83,7 @@
 <footer class="footer">
     <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
   <br />
-<address>
-    <ul class="contact-link-footer">
-        <li class="address">695 Park Ave, NY 10065, USA</li>
-        <li><a class="contact-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact-link-footer" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
-    </ul>
-</address>
+<p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
 </html>
