--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <nav>
     <ul class="nav">
         <li><a class="nav" href="index.html"><b>Studio</b></a></li> 
-        <li><a class="nav-current" href="portofolio.html"><b>Portofolio</b></a></li>
+        <li><a class="nav-current" href="portfolio.html"><b>Portfolio</b></a></li>
         <li><a class="nav" href="./Contacts.html"><b>Contacts</b></a></li>
     </ul>
     </nav>
@@ -29,8 +29,8 @@
 
 <br />
     <button type="button" class="button-portofolio"><span class="buttons">All</span></button>
-    <button type="button" class="button-portofolio"><span class="buttons">Web-sites</span></button>
-    <button type="button" class="button-portofolio"><span class="buttons">Apps</span></button>
+    <button type="button" class="button-portofolio"><span class="buttons">Web-site</span></button>
+    <button type="button" class="button-portofolio"><span class="buttons">App</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">Design</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">Marketing</span></button>
 
@@ -38,96 +38,90 @@
 
     <section class="pictures"> 
         <h2 class="h2-portofolio">none</h2>
-    <img src="images/image-8.jpg" alt="Technoduck" width="300">
+    <img src="images/image-8.jpg" alt="Banking app" width="360">
     <br />
-    <span class="pictures-title">Technoduck</span>
+    <span class="pictures-title">Banking App Interface Concept</span>
     <br />
-    <span class="pics-description">Web-site</span>
+    <span class="pics-description">App</span>
 </section>
 <br />
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
-    <img src="images/image-9.jpg" alt="Poster" width="300">
+    <img src="images/image-9.jpg" alt="Cashless Payment" width="360">
     <br />
-    <span class="pictures-title">Poster New Orlean vs Golden Star</span>
-    <br />
-    <span class="pics-description">Design</span>
-</section>
-<br />
-<section class="pictures">
-    <h2 class="h2-portofolio">none</h2>
-    <img src="images/image-10.jpg" alt="Restaurant" width="300">
-    <br />
-    <span class="pictures-title">Seafood Resteaurant</span>
-    <br />
-    <span class="pics-description">Apps</span>
-</section>
-<br />
-<section class="pictures">
-    <h2 class="h2-portofolio">none</h2>
-    <img src="images/image-11.jpg" alt="Headphones" width="300">
-    <br />
-    <span class="pictures-title">Project Prime</span>
+    <span class="pictures-title">Cashless Payment</span>
     <br />
     <span class="pics-description">Marketing</span>
 </section>
 <br />
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
-    <img src="images/image-12.jpg" alt="Boxes" width="300">
+    <img src="images/image-10.jpg" alt="Meditation" width="360">
     <br />
-    <span class="pictures-title">Project boxes</span>
+    <span class="pictures-title">Meditation App</span>
     <br />
-    <span class="pics-description">Apps</span>
+    <span class="pics-description">App</span>
 </section>
 <br />
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
-    <img src="images/image-13.jpg" alt="Monitor" width="300">
+    <img src="images/image-11.jpg" alt="Taxi" width="360">
     <br />
-    <span class="pictures-title">Inspiration has no Borders</span>
-    <br />
-    <span class="pics-description">Web-site</span>
-</section>
-<br />
-<section class="pictures">
-    <h2 class="h2-portofolio">none</h2>
-    <img src="images/image-14.jpg" alt="Magazine" width="300">
-    <br />
-    <span class="pictures-title">Limited Edition</span>
-    <br />
-    <span class="pics-description">Design</span>
-</section>
-<br />
-<section class="pictures">
-    <h2 class="h2-portofolio">none</h2>
-    <img src="images/image-15.jpg" alt="Label" width="300">
-    <br />
-    <span class="pictures-title">Project LAB</span>
+    <span class="pictures-title">Taxi Service</span>
     <br />
     <span class="pics-description">Marketing</span>
 </section>
 <br />
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
-    <img src="images/image-16.jpg" alt="Laptop typing" width="300">
+    <img src="images/image-12.jpg" alt="Screens" width="360">
     <br />
-    <span class="pictures-title">Growing Business</span>
+    <span class="pictures-title">Screen Illustrations</span>
     <br />
-    <span class="pics-description">Apps</span>
+    <span class="pics-description">Design</span>
+</section>
+<br />
+<section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
+    <img src="images/image-13.jpg" alt="Girl Smiling" width="360">
+    <br />
+    <span class="pictures-title">Online Courses</span>
+    <br />
+    <span class="pics-description">Marketing</span>
+</section>
+<br />
+<section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
+    <img src="images/image-14.jpg" alt="Stories" width="360">
+    <br />
+    <span class="pictures-title">Instagram Stories Concept</span>
+    <br />
+    <span class="pics-description">Design</span>
+</section>
+<br />
+<section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
+    <img src="images/image-15.jpg" alt="Shopping bag" width="360">
+    <br />
+    <span class="pictures-title">Organic Food</span>
+    <br />
+    <span class="pics-description">Web Site</span>
+</section>
+<br />
+<section class="pictures">
+    <h2 class="h2-portofolio">none</h2>
+    <img src="images/image-16.jpg" alt="Pouring coffee" width="360">
+    <br />
+    <span class="pictures-title">Fresh Coffee</span>
+    <br />
+    <span class="pics-description">Web Site</span>
 </section>
 
 
 <footer class="footer">
-        <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
-      <br />
-        <address>
-        <ul class="contact-link-footer">
-            <li class="address">695 Park Ave, NY 10065, USA</li>
-            <li><a class="contact-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-link-footer" href="tel:+1212-772-4150">+1 212-772-4150</a></li>
-        </ul>
-</address>
-</footer>
+    <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
+  <br /> 
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
