--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
 
 <footer class="footer">
     <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
-  <br />
-<p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  <br /> 
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <address>
+        <p class="address">695 Park Ave, NY 10065, USA</p>
+        <p class="contact-link-footer">info@devstudio.com</p>
+        <p class="contact-link-footer">+1 212-772-4150</p>
+    </address>    
 </footer>
 </body>
 </html>
