--- a/portfolio.html
+++ b/portfolio.html
@@ -27,101 +27,84 @@
     </ul>
 </header>
 
-<br />
     <button type="button" class="button-portofolio"><span class="buttons">All</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">Web-site</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">App</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">Design</span></button>
     <button type="button" class="button-portofolio"><span class="buttons">Marketing</span></button>
 
-<br />
-
-    <section class="pictures"> 
-        <h2 class="h2-portofolio">none</h2>
+<section class="pictures"> 
+    <h2 class="h2-portofolio">none</h2>
     <img src="images/image-8.jpg" alt="Banking app" width="360">
-    <br />
-    <span class="pictures-title">Banking App Interface Concept</span>
-    <br />
-    <span class="pics-description">App</span>
+    <div class="pictures-title">Banking App Interface Concept</div>
+    <div class="pics-description">App</div>
 </section>
-<br />
+
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
     <img src="images/image-9.jpg" alt="Cashless Payment" width="360">
-    <br />
-    <span class="pictures-title">Cashless Payment</span>
-    <br />
-    <span class="pics-description">Marketing</span>
+    <div class="pictures-title">Cashless Payment</div>
+    <div class="pics-description">Marketing</div>
 </section>
-<br />
+
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
     <img src="images/image-10.jpg" alt="Meditation" width="360">
-    <br />
-    <span class="pictures-title">Meditation App</span>
-    <br />
-    <span class="pics-description">App</span>
+    <div class="pictures-title">Meditation App</div>
+    <div class="pics-description">App</div>
 </section>
-<br />
+
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
     <img src="images/image-11.jpg" alt="Taxi" width="360">
-    <br />
-    <span class="pictures-title">Taxi Service</span>
-    <br />
-    <span class="pics-description">Marketing</span>
+    <div class="pictures-title">Taxi Service</div>
+    <div class="pics-description">Marketing</div>
 </section>
-<br />
+
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
     <img src="images/image-12.jpg" alt="Screens" width="360">
-    <br />
-    <span class="pictures-title">Screen Illustrations</span>
-    <br />
-    <span class="pics-description">Design</span>
+    <div class="pictures-title">Screen Illustrations</div>
+    <div class="pics-description">Design</div>
 </section>
-<br />
+
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
     <img src="images/image-13.jpg" alt="Girl Smiling" width="360">
-    <br />
-    <span class="pictures-title">Online Courses</span>
-    <br />
-    <span class="pics-description">Marketing</span>
+    <div class="pictures-title">Online Courses</div>
+    <div class="pics-description">Marketing</div>
 </section>
-<br />
+
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
     <img src="images/image-14.jpg" alt="Stories" width="360">
-    <br />
-    <span class="pictures-title">Instagram Stories Concept</span>
-    <br />
-    <span class="pics-description">Design</span>
+    <div class="pictures-title">Instagram Stories Concept</div>
+    <div class="pics-description">Design</div>
 </section>
-<br />
+
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
     <img src="images/image-15.jpg" alt="Shopping bag" width="360">
-    <br />
-    <span class="pictures-title">Organic Food</span>
-    <br />
-    <span class="pics-description">Web Site</span>
+    <div class="pictures-title">Organic Food</div>
+    <div class="pics-description">Web Site</div>
 </section>
-<br />
+
 <section class="pictures">
     <h2 class="h2-portofolio">none</h2>
     <img src="images/image-16.jpg" alt="Pouring coffee" width="360">
-    <br />
-    <span class="pictures-title">Fresh Coffee</span>
-    <br />
-    <span class="pics-description">Web Site</span>
+    <div class="pictures-title">Fresh Coffee</div>
+    <div class="pics-description">Web Site</div>
 </section>
 
 
 <footer class="footer">
     <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=0-1&mode=design&t=Td3jKYtAc2wYockx-0"><span class="web">Web</span><span class="footer-studio">Studio</span></a> 
-  <br /> 
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
+    <address>
+        <p class="address">695 Park Ave, NY 10065, USA</p>
+        <p class="contact-link-footer">info@devstudio.com</p>
+        <p class="contact-link-footer">+1 212-772-4150</p>
+    </address>    
+</footer>
 </body>
 </html>
